Issue #3377202: messages close icon not visible in forced colors mode

--- a/styles/base/_messages.scss
+++ b/styles/base/_messages.scss
@@ -49,6 +49,10 @@
       left: 0;
       width: 1.5rem;
       height: 1.5rem;
+
+      @media (forced-colors: active) {
+        background-color: linktext !important;
+      }
     }
   }
 
@@ -91,6 +95,10 @@
       mask-repeat: no-repeat;
       mask-position: center;
       background-color: #fff;
+
+      @media (forced-colors: active) {
+        background-color: buttonBorder;
+      }
     }
   }
 
@@ -132,6 +140,10 @@
         mask-image: icon('status');
         mask-repeat: no-repeat;
         mask-position: center left;
+
+        @media (forced-colors: active) {
+          background-color: buttonBorder;
+        }
       }
     }
 
